--- a/index.html
+++ b/index.html
@@ -23,26 +23,42 @@
           'eighth': 1,
           'sixteenth': 1
         },
-        count = 0;
+        count = 0,
+        progressTicks = 0,
+        endBars = 4,
+        endTicks = 16*4*endBars;
 
     $(document).ready(function(){
 
-      $("#bpm").text('bpm:' + bpm);
+      $("#bpm").text(bpm);
       $("#slider").slider({
         'min': 1,
         'max': 200,
         'value': bpm,
         'slide': function(event, ui) {
           bpm = ui.value;
-          $("#bpm").text('bpm:' + bpm);
+          $("#bpm").text(bpm);
         }
       });
 
       function draw() {
         count++;
+        if (progressTicks == endTicks) {
+          progressTicks = 0;
+        }
+        else {
+          progressTicks++;
+        }
+        $('#progress').text(progressTicks);
+
         if (notes.sixteenth == 16){
           if (notes.quarter == 4) {
-            notes.whole++;
+            if (notes.whole == endBars) {
+              notes.whole = 1;
+            }
+            else {
+              notes.whole++;
+            }
             notes.quarter = 1;
           }
           else {
@@ -81,8 +97,9 @@
 
 
     <body>
-      <div id="bpm"></div>
+      bpm: <div id="bpm"></div>
       <div id="counter"></div>
       <div id="slider"></div>
+      progress: <div id="progress"></div>
     </body>
   </html>​
